--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@stitches/react": "^1.2.8",
     "axios": "^1.6.2",
+    "immer": "^10.0.3",
     "keen-slider": "^6.8.6",
     "next": "14.0.2",
     "phosphor-react": "^1.4.1",
