--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "stripe": "^14.5.0"
   },
   "devDependencies": {
